<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:minWidth="@dimen/activity_horizontal_margin"
    android:background="@drawable/cell_border">

...
        app:layout_constraintCircleRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/challengerName" />

    <TextView
        android:id="@+id/numberOfLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:text="curtidas"
        android:textColor="#ffffff"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/likesButton"
        app:layout_constraintStart_toEndOf="@+id/likesButton"
        app:layout_constraintTop_toTopOf="@+id/likesButton" />

    <ImageButton
        android:id="@+id/likesButton"
        android:layout_width="25dp"
...
