...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2E2E">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/feedRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
...
