<resources>
    <string name="app_name">Nexte</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_show_profile">ShowProfileActivity</string>
    <string name="title_activity_feed_view">FeedView</string>

    <!-- Google Cloud url -->
    <string name="image_server_URL">https://storage.googleapis.com/nexte-profile-images/profile_image</string>

    <!--Account Kit-->

    <string name="FACEBOOK_APP_ID">165708047598044</string>
    <string name="ak_login_protocol_scheme">ak165708047598044</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">19cbea5f56f6e79143670c57d334e290</string>

    <string name="user_picture">User picture</string>
    <string name="nome">nome</string>
    <string name="_2">2</string>
    <string name="r">R</string>
    <string name="vitorias_x">Vitorias: X</string>
    <string name="derrotas_x">Derrotas: X</string>
    <string name="check">✓</string>
    <string name="enviados">Enviados</string>
    <string name="recebidos">Recebidos</string>
    <string name="enviar">Enviar</string>
    <string name="enviar_desafio">Enviar Desafio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="n">N</string>
    <string name="userpicture">UserPicture</string>
    <string name="tenistas">Tenistas</string>

    <string name="sem_jogadores_dispon_veis">Sem Jogadores Disponíveis.</string>
    <string name="voc_j_enviou_um_desafio">Você já enviou um desafio</string>
    <string name="email">email</string>
    <string name="editar">Editar</string>
    <string name="age">age</string>
    <string name="e_mail">E-mail:</string>
    <string name="ranking">Ranking</string>
    <string name="username">username</string>
    <string name="profile">Profile</string>
    <string name="challenge">Challenge</string>
    <string name="feed">Feed</string>
    <string name="rankingMenu">Ranking</string>

    <!-- Navigation Bottom -->
    <string name="feedNavigation">FEED</string>
    <string name="rankingNavigation">RANKING</string>
    <string name="profileNavigation">PERFIL</string>
    <string name="challengeNavigation">DESAFIO</string>

    <!-- Challenge Scene -->
    <string name="challengeBestOf">Melhor De</string>
    <string name="challengeDefaultChallenger">Challenger</string>
    <string name="challengeDefaultChallenged">Challenged</string>
    <string name="challengeImageChallengerDescription">Foto do desafiante</string>
    <string name="challengeImageChallengedDescription">Foto do desafiado</string>
    <string name="challengeVsX">X</string>
    <string name="challengeAlreadyDescription">Você já jogou? Informe o resultado!</string>
    <string name="challengeSetDescription">Resultado do Set</string>
    <string name="challengeSetPlaceholder">GP</string>
    <string name="challengeWODescription">Quem desistiu?</string>
    <string name="challengeWOSelect">SELECIONE</string>
    <string name="challengeWOSelectChallenger">Desafiante</string>
    <string name="challengeWOSelectChallenged">Desafiado</string>
    <string name="challengeDateDescription">Data</string>
    <string name="challengeTimeDescription">Hora</string>
    <string name="challengeButtonCancel">Cancelar Desafio</string>
    <string name="challengeButtonPlay">Enviar Desafio</string>

    <string name="challengeNotReceived">Que pena, você ainda não recebeu um desafio!</string>
    <string name="challengeNotSended">Você ainda não tem desafios enviados, desafie alguém.</string>

    <!-- Challenge Tabs -->
    <string name="tabChallengeSended">Enviados</string>
    <string name="tabChallengeReceived">Recebidos</string>
    <string name="tabChallengePlayers">Tenistas</string>
    <string name="disponivel">Disponível</string>
    <string name="afastado">Afastado</string>
    <string name="cinta_liga_de_t_nis">Cinta Liga de Tênis</string>
    <string name="editarperfil">editar</string>
    <string name="prifler">R</string>
    <string name="profileusername">username</string>
    <string name="jogos">Jogos</string>
    <string name="profilen">N</string>
    <string name="vit_rias">Vitórias</string>
    <string name="afastar_se">Afastar-se</string>
    <string name="contato">Contato</string>
    <string name="estat_sticas">Estatísticas</string>
    <string name="vit_rias_derrotas">Vitórias/Derrotas</string>
    <string name="posi_es_por_tempo">Posições por tempo</string>
    <string name="partidas">Partidas</string>
    <string name="derrotas">Derrotas</string>
    <string name="a_cada_partida_de_t_nis_salve_a_sua_pontua_o">A cada partida de tênis salve a sua pontuação</string>
    <string name="mas_voc_precisa_estar_registrado_em_algum_clube_para_poder_participar_do_nexte">Mas você precisa estar registrado em algum clube para poder participar do Nexte!</string>
    <string name="estes_s_o_os_clubes_que_est_o_participando_do_nexte_at_o_momento">Estes são os clubes que estão participando do Nexte até o momento</string>
    <string name="imagem">imagem</string>
    <string name="seu_clube_n_o_est_registrado_entre_em_contato_conosco">Seu clube não está registrado? Entre em contato conosco!</string>
    <string name="e_mail_ou_telefone">E-mail ou telefone</string>
    <string name="solicita_o_de_registro">Solicitação de registro</string>
    <string name="x_uob">X</string>
    <string name="pref_previously_started">isFirstRun</string>

    <!-- Login Scene -->
    <string name="loginButtonNavegate">Navegar pelo NEXTE!</string>
    <string name="loginOrDescription">Entrar com e-mail ou telefone</string>
    <string name="loginButtonLogin">Entrar</string>
    <string name="loginPasswordDescription">Senha</string>
    <string name="loginEmailOrPhoneDescription">E-mail ou Telefone</string>
    <string name="loginLogoDescription">Logo of Nexte</string>
    <string name="loginBackgroundDescription">Background of Nexte</string>
    <string name="userOnboardingPages">Página X do UserOnboarding</string>
    <string name="userOnboardingImageOne">Primeira imagem do UserOnboarding</string>
    <string name="meus_jogos">Meus Jogos</string>


</resources>
